--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "prisma": "^5.19.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
